infra/k8s/billing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
        - name: billing
          image: powerconnect/billing
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: billing-srv
spec:
  selector:
    app: billing
  ports:
    - name: billing
      protocol: TCP
      port: 3000
      targetPort: 3000
