infra/k8s/clients-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clients
  template:
    metadata:
      labels:
        app: clients
    spec:
      containers:
        - name: clients
          image: powerconnect/clients
          ports:
          - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootfilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: clients-srv
spec:
  selector:
    app: clients
  ports:
    - name: clients
      protocol: TCP
      port: 3000
      targetPort: 3000
