infra/k8s/customer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: powerconnect/customer
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: customer-srv
spec:
  selector:
    app: customer
  ports:
    - name: customer
      protocol: TCP
      port: 3000
      targetPort: 3000
