infra/k8s/energy-monitor-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energy-monitor-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: energy-monitor
  template:
    metadata:
      labels:
        app: energy-monitor
    spec:
      containers:
        - name: energy-monitor
          image: powerconnect/energy-monitor
          ports:
          - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootfilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: energy-monitor-srv
spec:
  selector:
    app: energy-monitor
  ports:
    - name: energy-monitor
      protocol: TCP
      port: 3000
      targetPort: 3000
