infra/k8s/notifications-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: 761162707235.dkr.ecr.us-west-1.amazonaws.com/powerconnect/notifications:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-srv
  namespace: default
spec:
  selector:
    app: notifications
  ports:
    - name: notifications
      protocol: TCP
      port: 3000
      targetPort: 3000
