infra/k8s/rabbitmq-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-srv
  namespace: default
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: monitoring
      protocol: TCP
      port: 15672
      targetPort: 15672
