infra/k8s/reports-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reports
  template:
    metadata:
      labels:
        app: reports
    spec:
      containers:
        - name: reports
          image: powerconnect/reports
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: reports-srv
spec:
  selector:
    app: reports
  ports:
    - name: reports
      protocol: TCP
      port: 3000
      targetPort: 3000
