infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: powerconnect.com
      http:
        paths:
          - path: /api/billing/?(.*)
            pathType: Prefix
            backend:
              service:
                name: billing-srv
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-srv
                port:
                  number: 3000
          - path: /api/customers/?(.*)
            pathType: Prefix
            backend:
              service:
                name: customer-srv
                port:
                  number: 3000
          - path: /api/notifications/?(.*)
            pathType: Prefix
            backend:
              service:
                name: notifications-srv
                port:
                  number: 3000
          - path: /api/reports/?(.*)
            pathType: Prefix
            backend:
              service:
                name: reports-srv
                port:
                  number: 3000
          - path: /api/energy-monitor/?(.*)
            pathType: Prefix
            backend:
              service:
                name: energy-monitor-srv
                port:
                  number: 3000
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
